# CMakeList.txt : CMake project for AdventOfCode2021, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (SubmarineController "SubmarineController.cpp" "SubmarineController.h")

add_executable (SubmarineControllerMark2 "SubmarineControllerMark2.cpp" "SubmarineControllerMark2.h")

# TODO: Add tests and install targets if needed.
